--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,8 @@
 {
+    "terminal.integrated.shell.osx": "/usr/local/bin/zsh",
+    "terminal.integrated.shellArgs.windows": [
+        "-c",
+        "zsh"
+    ],
+    "terminal.integrated.shell.linux": "/bin/zsh",
 }
