--- a/package.json
+++ b/package.json
@@ -8,36 +8,50 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
-    "env-cmd": "^10.1.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "@reach/router": "^1.3.4",
+    "@tailwindcss/postcss7-compat": "^2.0.2",
+    "autoprefixer": "^9",
     "gatsby": "^2.25.3",
-    "gatsby-image": "^2.4.21",
+    "gatsby-image": "^2.7.0",
     "gatsby-plugin-feed": "^2.6.0",
+    "gatsby-plugin-gitalk": "^1.2.1",
     "gatsby-plugin-google-analytics": "^2.4.1",
     "gatsby-plugin-manifest": "^2.5.2",
     "gatsby-plugin-offline": "^3.3.3",
+    "gatsby-plugin-postcss": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-plugin-sass": "^2.7.0",
     "gatsby-plugin-sharp": "^2.7.1",
     "gatsby-remark-code-titles": "^1.1.0",
     "gatsby-remark-copy-linked-files": "^2.3.19",
-    "gatsby-remark-images": "^3.4.2",
     "gatsby-remark-prismjs": "^3.7.0",
     "gatsby-remark-responsive-iframe": "^2.4.17",
     "gatsby-remark-smartypants": "^2.3.13",
     "gatsby-source-filesystem": "^2.4.2",
-    "gatsby-transformer-remark": "^2.10.0",
     "gatsby-transformer-sharp": "^2.5.21",
+    "griding": "^0.5.0",
+    "lodash.kebabcase": "^4.1.1",
     "pngquant-bin": "^6.0.0",
+    "postcss": "^7",
     "prismjs": "^1.22.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "styled-components": "^5.2.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75"
+    "typeface-montserrat": "0.0.75",
+    "typography": "^0.16.19",
+    "typography-theme-moraga": "^0.16.19"
   },
   "devDependencies": {
-    "prettier": "2.1.2"
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-prettier": "^3.3.0",
+    "gatsby-remark-images": "^3.7.1",
+    "gatsby-transformer-remark": "^2.12.0",
+    "prettier": "2.1.2",
+    "sass": "^1.30.0"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
@@ -52,7 +66,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop  -H 0.0.0.0 -p 8000",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "format": "prettier --write 'src/**/*.+(ts|tsx|js|jsx|json|yml|yaml|md|mdx)'",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
