--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "imy-blog",
+  "name": "imy",
   "private": true,
-  "description": "A starter for a blog powered by Gatsby and Markdown",
+  "description": "A blog dive into tech.",
   "version": "0.1.0",
   "author": "Max Young <me@imaxyoung.com>",
   "bugs": {
@@ -38,6 +38,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-typing-animation": "^1.6.2",
     "styled-components": "^5.2.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typeface-merriweather": "0.0.72",
