--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@reach/router": "^1.3.4",
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "autoprefixer": "^9",
+    "confetti-js": "^0.0.18",
     "gatsby": "^2.25.3",
     "gatsby-image": "^2.7.0",
     "gatsby-plugin-feed": "^2.6.0",
