--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "@reach/router": "^1.3.4",
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "autoprefixer": "^9",
     "confetti-js": "^0.0.18",
     "gatsby": "^2.25.3",
     "gatsby-image": "^2.7.0",
-    "gatsby-plugin-feed": "^2.6.0",
+    "gatsby-plugin-feed-mdx": "^1.0.1",
     "gatsby-plugin-gitalk": "^1.2.1",
     "gatsby-plugin-google-analytics": "^2.4.1",
     "gatsby-plugin-manifest": "^2.5.2",
+    "gatsby-plugin-mdx": "^1.7.1",
     "gatsby-plugin-offline": "^3.3.3",
     "gatsby-plugin-postcss": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.3.14",
@@ -25,12 +28,12 @@
     "gatsby-plugin-sharp": "^2.7.1",
     "gatsby-remark-code-titles": "^1.1.0",
     "gatsby-remark-copy-linked-files": "^2.3.19",
+    "gatsby-remark-embed-gist": "^1.2.1",
     "gatsby-remark-prismjs": "^3.7.0",
     "gatsby-remark-responsive-iframe": "^2.4.17",
     "gatsby-remark-smartypants": "^2.3.13",
     "gatsby-source-filesystem": "^2.4.2",
     "gatsby-transformer-sharp": "^2.5.21",
-    "griding": "^0.5.0",
     "lodash.kebabcase": "^4.1.1",
     "pngquant-bin": "^6.0.0",
     "postcss": "^7",
@@ -38,6 +41,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-gist": "^1.2.2",
     "react-helmet": "^5.2.1",
     "react-typing-animation": "^1.6.2",
     "styled-components": "^5.2.1",
@@ -51,7 +55,6 @@
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-prettier": "^3.3.0",
     "gatsby-remark-images": "^3.7.1",
-    "gatsby-transformer-remark": "^2.12.0",
     "prettier": "2.1.2",
     "sass": "^1.30.0"
   },
