--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prismjs": "^1.22.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-accessible-accordion": "^3.3.3",
     "react-dom": "^16.12.0",
     "react-gist": "^1.2.2",
     "react-helmet": "^5.2.1",
