--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdx-js/react": "^1.6.22",
     "@reach/router": "^1.3.4",
     "@tailwindcss/postcss7-compat": "^2.0.2",
+    "@typefaces-pack/typeface-inter": "^1.0.3",
     "autoprefixer": "^9",
     "confetti-js": "^0.0.18",
     "gatsby": "^2.25.3",
@@ -30,10 +31,12 @@
     "gatsby-remark-copy-linked-files": "^2.3.19",
     "gatsby-remark-embed-gist": "^1.2.1",
     "gatsby-remark-prismjs": "^3.7.0",
+    "gatsby-remark-reading-time": "^1.1.0",
     "gatsby-remark-responsive-iframe": "^2.4.17",
     "gatsby-remark-smartypants": "^2.3.13",
     "gatsby-source-filesystem": "^2.4.2",
     "gatsby-transformer-sharp": "^2.5.21",
+    "github-slugger": "^1.3.0",
     "lodash.kebabcase": "^4.1.1",
     "pngquant-bin": "^6.0.0",
     "postcss": "^7",
@@ -45,12 +48,10 @@
     "react-gist": "^1.2.2",
     "react-helmet": "^5.2.1",
     "react-typing-animation": "^1.6.2",
-    "styled-components": "^5.2.1",
+    "remark-slug": "^6.0.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75",
-    "typography": "^0.16.19",
-    "typography-theme-moraga": "^0.16.19"
+    "typeface-montserrat": "0.0.75"
   },
   "devDependencies": {
     "eslint-config-prettier": "^7.0.0",
