--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "react-typing-animation": "^1.6.2",
     "remark-slug": "^6.0.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "typeface-antic-slab": "^1.1.13",
+    "typeface-arvo": "^1.1.13",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75"
   },
