--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "confetti-js": "^0.0.18",
     "gatsby": "^2.25.3",
     "gatsby-image": "^2.7.0",
+    "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-feed-mdx": "^1.0.1",
     "gatsby-plugin-gitalk": "^1.2.1",
     "gatsby-plugin-gtag": "^1.0.13",
@@ -30,6 +31,7 @@
     "gatsby-remark-code-titles": "^1.1.0",
     "gatsby-remark-copy-linked-files": "^2.3.19",
     "gatsby-remark-embed-gist": "^1.2.1",
+    "gatsby-remark-images-medium-zoom": "^1.7.0",
     "gatsby-remark-prismjs": "^3.7.0",
     "gatsby-remark-reading-time": "^1.1.0",
     "gatsby-remark-responsive-iframe": "^2.4.17",
