--- a/package.json
+++ b/package.json
@@ -11,47 +11,43 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@reach/router": "^1.3.4",
-    "@tailwindcss/postcss7-compat": "^2.0.2",
     "@typefaces-pack/typeface-inter": "^1.0.3",
-    "autoprefixer": "^9",
     "confetti-js": "^0.0.18",
-    "gatsby": "^2.25.3",
-    "gatsby-image": "^2.7.0",
+    "gatsby": "^3.3.1",
+    "gatsby-image": "^2.11.0",
     "gatsby-plugin-dark-mode": "^1.1.2",
-    "gatsby-plugin-feed-mdx": "^1.0.1",
-    "gatsby-plugin-gitalk": "^1.2.1",
+    "gatsby-plugin-feed-mdx": "^1.1.0",
+    "gatsby-plugin-gitalk": "^1.2.2",
     "gatsby-plugin-gtag": "^1.0.13",
-    "gatsby-plugin-manifest": "^2.5.2",
-    "gatsby-plugin-mdx": "^1.7.1",
-    "gatsby-plugin-offline": "^3.3.3",
-    "gatsby-plugin-postcss": "^3.4.0",
-    "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-plugin-manifest": "^2.12.1",
+    "gatsby-plugin-mdx": "^1.10.1",
+    "gatsby-plugin-offline": "^3.10.2",
+    "gatsby-plugin-postcss": "^4.3.0",
+    "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sass": "^2.7.0",
-    "gatsby-plugin-sharp": "^2.7.1",
+    "gatsby-plugin-sharp": "^2.14.3",
     "gatsby-remark-code-titles": "^1.1.0",
-    "gatsby-remark-copy-linked-files": "^2.3.19",
+    "gatsby-remark-copy-linked-files": "^2.10.0",
     "gatsby-remark-embed-gist": "^1.2.1",
     "gatsby-remark-images-medium-zoom": "^1.7.0",
-    "gatsby-remark-prismjs": "^3.7.0",
+    "gatsby-remark-prismjs": "^3.13.0",
     "gatsby-remark-reading-time": "^1.1.0",
-    "gatsby-remark-responsive-iframe": "^2.4.17",
-    "gatsby-remark-smartypants": "^2.3.13",
-    "gatsby-source-filesystem": "^2.4.2",
-    "gatsby-transformer-sharp": "^2.5.21",
+    "gatsby-remark-responsive-iframe": "^2.11.0",
+    "gatsby-remark-smartypants": "^2.10.0",
+    "gatsby-source-filesystem": "^2.11.1",
+    "gatsby-transformer-sharp": "^2.12.1",
     "github-slugger": "^1.3.0",
     "lodash.kebabcase": "^4.1.1",
     "pngquant-bin": "^6.0.0",
-    "postcss": "^7",
     "prismjs": "^1.22.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-accessible-accordion": "^3.3.3",
+    "react-accessible-accordion": "^3.3.4",
     "react-dom": "^16.12.0",
     "react-gist": "^1.2.2",
     "react-helmet": "^5.2.1",
     "react-typing-animation": "^1.6.2",
     "remark-slug": "^6.0.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typeface-antic-slab": "^1.1.13",
     "typeface-arvo": "^1.1.13",
     "typeface-fira-code": "^1.1.13",
@@ -60,11 +56,15 @@
     "typeface-roboto-mono": "^1.1.13"
   },
   "devDependencies": {
+    "autoprefixer": "^10.2.5",
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-prettier": "^3.3.0",
     "gatsby-remark-images": "^3.7.1",
+    "pngquant": "^4.0.0",
+    "postcss": "^8.2.12",
     "prettier": "2.1.2",
-    "sass": "^1.30.0"
+    "sass": "^1.30.0",
+    "tailwindcss": "^2.1.2"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
